fix: non diag nifti drag/drop feat: move this view download fix: white theme screenshot contract expmt: cpn desc feat: additional voi display
